[package]
name = "lst-dex-adapter-osmosis"
version = "0.0.1"
authors = ["Quasar"]
edition = "2021"
homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]
resolver = "2"

exclude = ["lst_dex_adapter_osmosis.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"
required-features = ["schema"]

[features]
default = ["export"]
export = []
daemon-bin = [
  "cw-orch/daemon",
  "dep:clap",
  "dep:abstract-client",
  "dep:dotenv",
  "dep:env_logger",
]
schema = ["abstract-app/schema"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
cw-asset = { workspace = true }
abstract-app = { workspace = true }
const_format = { workspace = true }

# Dependencies for interface
cw-orch = { workspace = true }
abstract-interface = { workspace = true }

# Dependencies for bins
clap = { workspace = true, optional = true, features = ["derive"] }
abstract-client = { workspace = true, optional = true }
dotenv = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
abstract-dex-adapter = { git = "https://github.com/AbstractSDK/abstract.git", tag="v0.22.1", default-features = false }
quasar-types = { workspace = true }
lst-adapter-osmosis = { workspace = true }

[dev-dependencies]
abstract-client = { workspace = true }
abstract-app = { workspace = true, features = ["test-utils"] }
wyndex-bundle = { git = "https://github.com/AbstractSDK/abstract.git", tag = "v0.22.1", default-features = false }
abstract-dex-adapter = { git = "https://github.com/AbstractSDK/abstract.git", tag="v0.22.1", features = [
  "wynd",
  "testing",
] }
