[package]
name = "lst-vault-osmosis"
version = "0.1.0"
authors = ["Quasar"]
edition = "2018"

exclude = [
  "lst_vault_osmosis.wasm",
  "hash.txt",
]


[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["cosmwasm_1_1"] }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
osmosis-std = { workspace = true }
quasar-types = { workspace = true }
lst-dex-adapter-osmosis = { workspace = true }
lst-adapter-osmosis = { workspace = true }
mars-owner = { workspace = true }