[package]
authors = ["Nikita (rizz) <nj18@nyu.edu>"]
edition = "2021"
name = "merkle-incentives"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
base64 = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std ={ workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde-json-wasm = { workspace = true }
thiserror = { workspace = true }

rs_merkle = { version = "1.4.2", default-features = false }

[dev-dependencies]
osmosis-test-tube = { workspace = true }
