[package]
authors = ["Nikita (rizz) <nj18@nyu.edu>"]
edition = "2021"
name = "range-middleware"
version = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 ={ workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
dex-router-osmosis = { workspace = true }
cl-vault = {path = "../cl-vault", features = ["library"]}
osmosis-std = "0.25.0"

[dev-dependencies]
cw-multi-test = { workspace = true }
