[package]
authors = ["Nikita (rizz) <nj18@nyu.edu>"]
edition = "2021"
name = "range-middleware"
version = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 ={ workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cl-vault = {path = "../cl-vault", features = ["library"]}
osmosis-std = { workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-orch = { workspace = true }
cw-orch-osmosis-test-tube = { workspace = true }


[dev-dependencies]
cw-orch-osmosis-test-tube = { workspace = true }
osmosis-helpers = { path = "../../packages/osmosis-helpers" }
cw-multi-test = { workspace = true }
interface = {path = "../../packages/interface"}
cw-vault-multi-standard = { path = "../cw-vault-multi-standard"}
