[package]
name = "proto-build"
version = "0.1.0"
authors = ["Quasar"]
edition = "2018"
publish = false

[dependencies]
prost = { workspace = true }
prost-build = { workspace = true }
tonic = { workspace = true }
tonic-build = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }