# This feature has been stabilized in 1.64. If using an earlier version (like in
# rust-optimizer-arm:0.12.8) you should uncomment this like to be able to
# compile the contract
#
#cargo-features = ["workspace-inheritance"]

[package]
authors = ["Nicolas Lara <nicolaslara@gmail.com>", "N <n@quasar.fi"]
edition = "2021"
name = "batch-crosschain-swaps"
rust-version = "1.65.0"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the crates publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use imported feature to disable all instantiate/execute/query exports
imported = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.11
"""
optimize-m1 = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer-arm64:0.12.11
"""

[[bin]]
name = "build-schema"
path = "build-schema/schema.rs"

[dependencies]
bech32 = {workspace = true}
cosmwasm-schema = {workspace = true}
cosmwasm-std = {workspace = true}
cw-storage-plus = {workspace = true}
cw-utils = {workspace = true}
cw2 = {workspace = true}
itertools = {workspace = true}
osmosis-std = {workspace = true}
schemars = {workspace = true}
serde = {workspace = true}
serde-cw-value = {workspace = true}
serde-json-wasm = {workspace = true}
thiserror = {workspace = true}

enum-repr = "0.2.6"
prost = {version = "0.11.2", default-features = false, features = ["prost-derive"]}
registry = {path = "../../packages/registry"}
swaprouter = {path = "../swaprouter", features = ["imported"]}

[dev-dependencies]
cw-multi-test = {workspace = true}
osmosis-testing = {workspace = true}
