[package]
authors = ["LaurensKubat <32776056+LaurensKubat@users.noreply.github.com>"]
edition = "2021"
name = "cl-vault"
version = "0.3.0"

exclude = [
  "cl_vault.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"

[[test]]
name = "test-tube"
path = "tests/test-tube/integration.rs"
required-features = ["test-tube"]

[[test]]
name = "prop-test"
path = "tests/test-tube/fuzzer.rs"
required-features = ["test-tube"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []
test-tube = ["osmosis-test-tube"]

[dependencies]
cosmwasm-std = { workspace = true }
osmosis-std = { workspace = true }
osmosis-std-derive = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus ={ workspace = true }
schemars ={ workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
num_enum = { workspace = true }
apollo-cw-asset = { workspace = true }
dex-router-osmosis = {workspace = true}
cw-vault-multi-standard = {git = "https://github.com/quasar-finance/cw-vault-standard", branch ="master", features = ["lockup", "force-unlock"]}
osmosis-test-tube = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
