[package]
name = "fake-lst-adapter"
version = "0.1.0"
authors = ["Lars Lubkoll <lars@quasar.fi>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "fake_lst_adapter.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gen"
required-features = ["protobuf", "protobuf-codegen"]

[features]
default = ["export"]
export = []
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
const_format = { workspace = true }
osmosis-std = { workspace = true }

# Dependencies for interface
cw-orch = { workspace = true }

# Dependencies for bins
clap = { workspace = true, optional = true, features = ["derive"] }
dotenv = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
protobuf = { version = "3.5.0", optional = true }
protobuf-codegen = { version = "3.5.0", optional = true }